added functionality to the project links and fixed bugs in the background images

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 	<section class="page3" id="page3">
 			<div class="list">
-                <div class="project">
+                <div class="project Portfolio_v1">
                     <a href="https://github.com/pdkoding/Portfolio_v1" target="_blank">
                         <p>
                             My first project - small portfolio <br>
@@ -73,7 +73,7 @@
                         </p>
                     </a>
                 </div>
-                <div class="project">
+                <div class="project blackjack">
                     <a href="https://github.com/pdkoding/blackjack" target="_blank">
                         <p>
                             Small BlackJack Game build <br>
@@ -81,7 +81,7 @@
                         </p>
                     </a>
                 </div>
-                <div class="project">
+                <div class="project Challenge_fence">
                     <a href="https://github.com/pdkoding/Challenge_fence" target="_blank">
                         <p>
                             Fence Calculator that calculate <br>
@@ -90,7 +90,7 @@
                         </p>
                     </a>
                 </div>
-                <div class="project">
+                <div class="project Cow_Game">
                     <a href="https://github.com/pdkoding/Cow_Game" target="_blank">
                         <p>
                             Awesome game where we need to <br>
@@ -98,14 +98,14 @@
                         </p>
                     </a>
                 </div>
-                <div class="project">
+                <div class="project solar_system">
                     <a href="https://github.com/pdkoding/solar_system" target="_blank">
                         <p>
                             SVG model of the solar system
                         </p>
                     </a>
                 </div>
-                <div class="project">
+                <div class="project Mayden">
                     <a href="">
                         <p>
                             You need to check this out!
